css/lists.css
/* Rocket Lists Component */

div[data-rocket-component="list"]{ /* Overall List Component */
    float: left;
    height: auto;
    width: 250px;
    color: #333333;
    font-family: 'Droid Sans', 'Segoe UI', Calibri;
    font-size: 16px;
    text-indent: 10px;
    line-height: 40px;
}

div[data-rocket-component="list-label"]{ /* The List's label */
    float: left;
    height: 40px;
    min-width: 250px;
    background-color: #f3f3f3;
    background-image: url("../img/down.png");
    background-position-x: 95%;
    background-position-y: center;
    background-repeat: no-repeat;
}

div[data-rocket-component="list-label"] > img{ /* The optional label image */
    float: left;
    height: 40px;
    width: 40px;
}

div[data-rocket-component="list-dropdown"]{ /* The list dropdown */
    float: left;
    display: block;
    height: auto;
    min-height: 40px;
    width: inherit;
    overflow: hidden;
    border-top: 2px solid #efefef;
    background-color: #f3f3f3;
    margin-top: 40px;
    position: fixed;
    z-index: 10;
}

div[data-rocket-component="list-item"]{ /* An individual list dropdown item */
    float: left;
    display: block;
    height: 40px;
    width: 100%;
    font-size: 15px !important;
    overflow: hidden;
}

div[data-rocket-component="list-item"] > a{ /* Links within the List dropdown item
    /* Override any color or text decoration to make sure it looks good on the list item */
    color: #0099ff !important;
    font-weight: normal;
    text-decoration: none;
}

div[data-rocket-component="list-item"] div:nth-child(2){ /* 2nd child in a list-item (only acceptable when having a label AND button) */
    float: right !important; /* Float the component to the right */
}

div[data-rocket-component="list-item"] > div[data-rocket-component="button"][data-rocket-component-type="basic"]{
    /* Overrides for Basic Button component within the dropdown list item */
    color: #fafafa !important;
    font-size: 16px !important;
    text-indent: 0px !important;;
    margin: 0px !important;
}

/* End of Rocket Lists Component */

